# azure-python-samples

./: README.md  requirements.build.txt
simple_package/: azure-pipelines.yml  setup.cfg  setup.py
simple_package/simple_package/: __init__.py
