[metadata]
name = simple_package
version = 0.0.1
description = Simple package with no dependencies
author = Noel Bundick
author_email = noelbundick@gmail.com
license = MIT
url = https://github.com/noelbundick/azure-python-samples/simple_package
platforms = any
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development

[options]
packages = find:

[bdist_wheel]
universal = 1
